# AvoidBench

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
AvoidLib/: CMakeLists.txt
AvoidLib/cmake/: AvoidLibClient.cmake  AvoidLibServer.cmake  setup_dependencies.cmake
AvoidLib/include/Avoid/: Client.h  Common.h  ImageResult.h  Mission.h  MissionState.h  Vehicle.h  VehicleState.h  World.h
AvoidLib/include/Avoid/Benchmarking/: BenchmarkingInterface.h
AvoidLib/include/Avoid/Control/: ControllerReference.h  ControllerSettings.h
AvoidLib/src/: Client.cpp  Mission.cpp  Vehicle.cpp  World.cpp
AvoidLib/src/Benchmarking/: BenchmarkingInterface.cpp
AvoidLib/src/rpc/: APIDefinition.h  RPCClient.cpp  RPCClient.h  RPCServer.cpp  RPCServer.h
AvoidLib/src/rpc/headers/: APIDefinition.h  RPCServer.h
AvoidLib/src/rpc/headers/types/: DroneState.h  ImageResult.h  MissionInfo.h
AvoidLib/test/: CMakeLists.txt  ClientTest.cpp
AvoidLib/tmp/: Benchmark.h  Controller.h
Python/: .gitignore  CMakeLists.txt  setup.py
Python/Avoid/: Avoid.cpp  Client.cpp  World.cpp
Unreal/AvoidUE4/: .gitignore  AvoidUE4.uproject
Unreal/AvoidUE4/Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Unreal/AvoidUE4/Plugins/Avoid/: Avoid.uplugin
Unreal/AvoidUE4/Plugins/Avoid/Source/: Avoid.Build.cs  Avoid.cpp  Avoid.h  AvoidDroneManager.cpp  (+1 more)
Unreal/AvoidUE4/Source/: Bench.Target.cs  BenchEditor.Target.cs
Unreal/AvoidUE4/Source/Bench/: Bench.Build.cs  Bench.cpp  BenchGameModeBase.cpp  BenchGameModeBase.h  PoissonDisc.cpp  PoissonDisc.h  test.h
Unreal/AvoidUE4/WindowsNoEditor/: Manifest_NonUFSFiles_Win64.txt
cmake/: submodule.cmake
examples/: benchmark_example.py  direct_interface.py
(+35 files in other folders)
